# G-Brain

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_README.md  PROGRESS.md  QUICKSTART.md  README.md  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci-cd.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  exception_handlers.py  main.py  middleware.py  observability.py
apps/api/app/routers/: __init__.py  agents.py  analytics.py  audit.py  auth.py  connectors.py  documents.py  governance.py  graph.py  health.py  langgraph_workflows.py  memory.py  search.py  skills.py
apps/api/app/services/: __init__.py  agent_orchestration.py  analytics_service.py  audit_compliance.py  caching_layer.py  connector_framework.py  langgraph_agents.py  llm_integration.py  memory_consolidation.py  multi_tenancy.py  observability.py  resilience.py  search.py  skill_extraction.py  workflow_inference.py
apps/api/tests/: test_agent_orchestration.py  test_analytics.py  test_audit.py  test_connectors.py  test_langgraph_agents.py  test_memory_consolidation.py  test_observability.py  test_search.py  test_skill_extraction.py  test_workflow_inference.py
infrastructure/database/: neo4j-schema.cypher  postgresql-schema.sql
k8s/: api-deployment.yaml  config-secrets.yaml  namespace.yaml
