[tool.poetry]
name = "gbrain-api"
version = "0.1.0"
description = "G-Brain Enterprise AI Platform - API Server"
authors = ["Claude Code <claude@anthropic.com>"]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"

# Database
sqlalchemy = "^2.0"
psycopg = {version = "^3.1", extras = ["binary"]}
alembic = "^1.13.0"
asyncpg = "^0.29.0"

# Graph Database
neo4j = "^5.15"

# Vector Database
qdrant-client = "^2.7"

# Caching & Async
redis = {version = "^5.0", extras = ["hiredis"]}
celery = {version = "^5.3", extras = ["redis"]}

# Data Validation & Serialization
pydantic = "^2.5"
pydantic-settings = "^2.1"
pydantic-extra-types = "^2.4"

# HTTP Client
httpx = "^0.25.0"
aiohttp = "^3.9"

# Authentication & Security
python-jose = {version = "^3.3", extras = ["cryptography"]}
passlib = {version = "^1.7", extras = ["bcrypt"]}
cryptography = "^41.0"
pyjwt = "^2.8"

# LLM & AI
openai = "^1.3"
anthropic = "^0.7"
langchain = "^0.1"
langgraph = "^0.0"

# Observability
opentelemetry-api = "^1.21"
opentelemetry-sdk = "^1.21"
opentelemetry-exporter-prometheus = "^0.42b0"
opentelemetry-exporter-jaeger = "^1.21"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-instrumentation-redis = "^0.42b0"
langfuse = "^2.17"

# Utilities
python-slugify = "^8.0"
arrow = "^1.3"
tenacity = "^8.2"
structlog = "^23.3"

# Development
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
black = "^23.12"
pylint = "^3.0"
mypy = "^1.7"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pylint]
max-line-length = 100
disable = ["C0111", "W0212", "R0913"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (black handles this)
